upated time of summer training on student side

--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -520,7 +520,7 @@ Student -> Home
                             <span class="timeline-badge border-2 border border-primary flex-shrink-0 my-8"></span>
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 text-primary fw-semibold">1st June, '25!
+                        <div class="timeline-desc fs-3 mt-n1 text-primary fw-semibold">10th June, '25!
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
