some minor bug fixes

--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -175,7 +175,9 @@
                     disabled>Register</button>
                 </div>
 
-                <p class="text-sm mt-3 mb-0 text-center">Already have an account? <a href="{% url 'login' %}"
+                <p class="text-sm mt-3 mb-0 text-center">Already an
+                  <span class="font-weight-bolder" style="color: rgb(255, 101, 5);"
+                    title="Angaari is a Hindi word meaning 'fiery' or 'burning'">Angaari</span>? <a href="{% url 'login' %}"
                     class="text-dark font-weight-bolder">Login</a></p>
               </form>
             </div>
