--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -174,9 +174,9 @@
                         <a class="nav-link" href="{% url 'our_achievers' %}">Our Achievers</a>
                     </li>
 
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link article-link" href="{% url 'articles' %}">Job Articles</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" style="text-decoration: underline; color: rgb(253, 135, 0);"
                             href="{% url 'flames' %}">Summer Training🔥</a>
