updated some more changes

--- a/templates/student/assignments.html
+++ b/templates/student/assignments.html
@@ -28,7 +28,7 @@ Student -> Assignments
 
     <div class="card" id="card-title-2">
         <div class="card-header ">
-            <h5 class="card-title"><strong>({{ assignment.course.name }}) Title:</strong> {{ assignment.title }}</h5>
+            <h5 class="card-title"><strong>({{ assignment.course_name }}) Title:</strong> {{ assignment.title }}</h5>
         </div>
         <div class="card-body">
             <p class="card-text">{{ assignment.description|linebreaks }}</p>
