--- a/templates/student/flames/flames.html
+++ b/templates/student/flames/flames.html
@@ -701,15 +701,17 @@ active
                     <h4 class="flames-title">{{ registration.course.title }}</h4>
                     <p class="flames-subtitle">{{ registration.course.subtitle }}</p>
                 </div>
-                <span class="flames-status status-{{ registration.status|lower }}">Payment
+                <span class="flames-status status-{{ registration.status|lower }}">Registration
                     {{ registration.status }}</span>
                 <a href="{% url 'student_view_registration' registration.course.slug %}"
                     class="btn btn-sm mx-2 rounded-3 btn-primary">View More</a>
 
-                {% if not registration.payment_id and registration.status != 'Completed' %}
+                {% if registration.status != 'Completed' and registration.status != 'Rejected' %}
+
                 <a class="btn btn-sm mx-2 rounded-3 px-3 payment-button" data-registration-id="{{ registration.id }}">
                     Pay Now
                 </a>
+
                 {% endif %}
             </div>
             <div class="flames-body">
