--- a/templates/student/assignments.html
+++ b/templates/student/assignments.html
@@ -1,8 +1,8 @@
-{% extends "student/base.html" %}
+ {% extends "student/base.html" %}
 {% load static %}
 
 {% block title %}
-Student -> Assignments
+Student | Assignments
 {% endblock %}
 
 {% block body %}
