added assignment system for student

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -430,7 +430,7 @@
 
                         
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'assignments' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="#" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-copy"></i>
                                 </span>
