--- a/templates/administration/jovac/course.html
+++ b/templates/administration/jovac/course.html
@@ -29,9 +29,14 @@ active
                     class="btn btn-outline-primary button mt-n2 mb-3 w-100 ">Add Assignment</a>
 
             </div>
-            <div class="col-md-5 mx-auto">
+            <div class="col-md-3 mx-auto">
                 <a href="{% url 'administrator_edit_jovac' course.slug %}"
                     class="btn btn-outline-warning button mt-n2 mb-3 w-100 ">Edit Course</a>
+            </div>
+
+            <div class="col-md-3 mx-auto">
+                <a href="{% url 'administrator_jovac_enrollment_requests' course.slug %}"
+                    class="btn btn-outline-secondary button mt-n2 mb-3 w-100 ">Enrollment Requests</a>
             </div>
         </div>
 
