added jovac system for instructors as well

--- a/templates/instructor/base.html
+++ b/templates/instructor/base.html
@@ -180,16 +180,16 @@
                             </a>
                         </li>
 
-                        {% comment %}
-
                         <li class="sidebar-item">
-                            <a class="sidebar-link" href="{% url 'instructor_sessions' %}" aria-expanded="false">
+                            <a class="sidebar-link" href="{% url 'instructor_jovacs' %}" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-article"></i>
                                 </span>
-                                <span class="hide-menu">My Sessions</span>
+                                <span class="hide-menu">JOVAC '25</span>
                             </a>
                         </li>
+
+                        {% comment %}
 
                         <li class="sidebar-item">
                             <a class="sidebar-link" href="{% url 'instructor_assignments' %}" aria-expanded="false">
