--- a/templates/instructor/jovac/course.html
+++ b/templates/instructor/jovac/course.html
@@ -1,7 +1,7 @@
-{% extends "administration/base.html" %}
+{% extends "instructor/base.html" %}
 {% load static %}
 
-{% block title %}
+{% block title %}   
 JOVAC | {{ course.name }}
 {% endblock %}
 
@@ -23,17 +23,12 @@ active
         </div>
         <div class="row mt-n3">
             <div class="col-md-5 mx-auto">
-                <a href="{% url 'administrator_add_assignment' course.slug %}"
+                <a href="{% url 'instructor_jovac_add_assignment' course.slug %}"
                     class="btn btn-outline-primary button mt-n2 mb-3 w-100 ">Add Assignment</a>
 
             </div>
-            <div class="col-md-3 mx-auto">
-                <a href="{% url 'administrator_edit_jovac' course.slug %}"
-                    class="btn btn-outline-warning button mt-n2 mb-3 w-100 ">Edit Course</a>
-            </div>
-
-            <div class="col-md-3 mx-auto">
-                <a href="{% url 'administrator_jovac_enrollment_requests' course.slug %}"
+            <div class="col-md-5 mx-auto">
+                <a href="{% url 'instructor_jovac_enrollment_requests' course.slug %}"
                     class="btn btn-outline-secondary button mt-n2 mb-3 w-100 ">Enrollment Requests</a>
             </div>
         </div>
@@ -176,7 +171,7 @@ active
 
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
-                                    <a href="{% url 'view_assignment_submissions' assignment.id %}"
+                                    <a href="{% url 'instructor_view_assignment_submissions' assignment.id %}"
                                         class="btn btn-info float-end">View Submission✅
                                     </a>
 
