updated my batch page on temp basis

--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -27,7 +27,7 @@ Dashboard | My Courses
     <!-- ============================================ JOVAC ============================================-->
     <!-- ===============================================================================================-->
 
-    <div class="card">
+    <!-- <div class="card">
         <div class="card-body">
             <h3 class="heading">
                 <span class="fw-semibold">J O V A C 🔥</span>
@@ -35,11 +35,11 @@ Dashboard | My Courses
                 </span>
             </h3>
         </div>
-    </div>
+    </div> -->
 
     <!-- =========================================== APPROVED JOVAC COURSES =========================== -->
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
 
         {% for course in approved_courses %}
 
@@ -55,9 +55,7 @@ Dashboard | My Courses
                         By: <p class="card-text text-success fs-2 mb-2">
                              {{ course.get_instructor_names }}
                         </p>
-                        <!-- <p class="card-text text-black mb-1">
-                            Total Registrations: {{ company.job_set.all }}
-                        </p> -->
+      
                         <a href="{% url 'student_jovac' course.slug %}" class="btn btn-outline-secondary w-100">View More</a>
                     </div>
                 </a>
@@ -66,11 +64,11 @@ Dashboard | My Courses
 
         {% endfor %}
 
-    </div>
+    </div> -->
 
     <!-- ====================================== PENDING JOVAC ======================================== -->
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
 
 
         {% for course in pending_courses %}
@@ -89,11 +87,11 @@ Dashboard | My Courses
             </div>
         </div>
 
-        {% endfor %}
+        {% endfor %} -->
 
         <!-- ====================================== REJECTED JOVAC ======================================== -->
 
-        {% for course in rejected_courses %}
+        <!-- {% for course in rejected_courses %}
 
         <div class="col-md-3">
             <div class="card">
@@ -105,10 +103,10 @@ Dashboard | My Courses
             </div>
         </div>
 
-        {% endfor %}
+        {% endfor %} -->
 
         <!-- ====================================== ALL OTHER JOVAC ======================================== -->
-
+<!-- 
         {% for course in other_courses %}
         <div class="col-md-3">
             <div class="card">
@@ -129,7 +127,7 @@ Dashboard | My Courses
             </div>
         </div>
         {% endfor %}
-    </div>
+    </div> -->
 
     <!-- ===============================================================================================-->
     <!-- =========================================== BATCHES ===========================================-->
