added youtube video link

--- a/templates/administration/jovac/add_assignment.html
+++ b/templates/administration/jovac/add_assignment.html
@@ -40,6 +40,14 @@ active
                         placeholder="Enter HTML content for the tutorial"></textarea>
                 </div>
 
+                <!-- Tutorial link -->
+                <div class="mb-3 tutorial-field d-none">
+                    <label for="content" class="form-label">Tutorial Video</label>
+                    <input type="text" class="form-control" id="tutorial_link" name="tutorial_link"
+                        placeholder="Enter YouTube link for the tutorial video...">
+                </div>
+
+
                 <!-- Fields only for assignments -->
                 <div class="assignment-fields">
 
