added the student's side view page

--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -39,7 +39,7 @@ Dashboard | My Courses
 
     <!-- =========================================== APPROVED JOVAC COURSES =========================== -->
 
-    <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
 
         {% for course in approved_courses %}
 
@@ -64,7 +64,7 @@ Dashboard | My Courses
 
         {% endfor %}
 
-    </div> -->
+    </div>
 
     <!-- ====================================== PENDING JOVAC ======================================== -->
 
