--- a/templates/administration/jovac/edit_assignment.html
+++ b/templates/administration/jovac/edit_assignment.html
@@ -37,13 +37,15 @@ active
                 <div class="mb-3 tutorial-field">
                     <label for="content" class="form-label">Tutorial Content *</label>
                     <textarea class="form-control" id="content" name="content" rows="6"
-                        placeholder="Enter HTML content for the tutorial">{% if assignment.is_tutorial %}{{ assignment.content|safe }}{% endif %}</textarea>
+                        placeholder="Enter HTML content for the tutorial">{% if assignment.is_tutorial %}{{ assignment.content }}{% endif %}</textarea>
                 </div>
 
                 <!-- Content Preview (only visible if tutorial) -->
                 <div class="mb-3 tutorial-field">
                     <label class="form-label">Content Preview</label>
-                    <div id="content-preview" style="border:1px solid #ccc; padding:15px; min-height:200px; background:#181d22; overflow:auto; border-radius: 10px;"></div>
+                    <!-- <div id="content-preview" style="border:1px solid #ccc; padding:15px; background:#181d22; border-radius: 10px;"></div> -->
+
+                    <div id="content-preview" style="border:1px solid #ccc; padding:15px; background:#181d22; border-radius: 10px;"></div>
                 </div>
 
                 <!-- Content Preview (only visible if tutorial) -->
