added reordering in assignments

--- a/templates/administration/jovac/course_sheet.html
+++ b/templates/administration/jovac/course_sheet.html
@@ -61,6 +61,11 @@ active
                     class="btn btn-outline-warning button mt-n2 mb-3 w-100 ">Edit Sheet</a>
             </div>
 
+             <div class="col-md-5 mx-auto">
+                <a href="{% url 'reorder_course_sheet_assignments' sheet.slug %}"
+                    class="btn btn-outline-warning button mt-n2 mb-3 w-100 ">Reorder</a>
+            </div>
+
             <!-- 
             <div class="col-md-3 mx-auto">
                 <a href="{% url 'administrator_jovac_enrollment_requests' course.slug %}"
