--- a/templates/student/jovac/view_tutorial.html
+++ b/templates/student/jovac/view_tutorial.html
@@ -5,6 +5,14 @@
 {{ assignment.title }} | Tutorial
 {% endblock %}
 
+{% block extra_css %}
+
+
+
+{% endblock %}
+
+{% block jovac_active %}
+
 {% block body %}
 <div class="container-fluid">
     <div class="card shadow">
