--- a/templates/student/jovac/course_sheet.html
+++ b/templates/student/jovac/course_sheet.html
@@ -50,7 +50,7 @@ active
                     🔥</span>
             </h3>
         </div>
-        <div class="row mt-n3">
+        <!-- <div class="row mt-n3">
             <div class="col-md-5 mx-auto">
                 <a href="{% url 'administrator_add_assignment' course.slug sheet.slug %}"
                     class="btn btn-outline-primary button mt-n2 mb-3 w-100 ">Add Assignment</a>
@@ -61,12 +61,12 @@ active
                     class="btn btn-outline-warning button mt-n2 mb-3 w-100 ">Edit Sheet</a>
             </div>
 
-            <!-- 
+            
             <div class="col-md-3 mx-auto">
                 <a href="{% url 'administrator_jovac_enrollment_requests' course.slug %}"
                     class="btn btn-outline-secondary button mt-n2 mb-3 w-100 ">Enrollment Requests</a>
-            </div> -->
-        </div>
+            </div>
+        </div> -->
 
     </div>
 
