--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -68,7 +68,7 @@ Dashboard | My Courses
 
     <!-- ====================================== PENDING JOVAC ======================================== -->
 
-    <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
 
 
         {% for course in pending_courses %}
@@ -87,11 +87,11 @@ Dashboard | My Courses
             </div>
         </div>
 
-        {% endfor %} -->
+        {% endfor %}
 
         <!-- ====================================== REJECTED JOVAC ======================================== -->
 
-        <!-- {% for course in rejected_courses %}
+        {% for course in rejected_courses %}
 
         <div class="col-md-3">
             <div class="card">
@@ -103,10 +103,10 @@ Dashboard | My Courses
             </div>
         </div>
 
-        {% endfor %} -->
+        {% endfor %}
 
         <!-- ====================================== ALL OTHER JOVAC ======================================== -->
-<!-- 
+
         {% for course in other_courses %}
         <div class="col-md-3">
             <div class="card">
@@ -127,7 +127,7 @@ Dashboard | My Courses
             </div>
         </div>
         {% endfor %}
-    </div> -->
+    </div>
 
     <!-- ===============================================================================================-->
     <!-- =========================================== BATCHES ===========================================-->
