--- a/templates/student/jovac/view_tutorial.html
+++ b/templates/student/jovac/view_tutorial.html
@@ -31,7 +31,8 @@
             <hr>
 
             <!-- create a back to sheet page button using js history-->
-            <button class="btn btn-secondary" onclick="history.back()">Back to Sheet</button>
+            <button class="btn btn-secondary" onclick="history.back()">Previous</button>
+            <a class="btn btn-secondary float-end" href="{% url 'get_next_jovac_assignment' tutorial.id %}">Next</a>
             
         </div>
     </div>
